css/styles.css
* {
    margin:0;
    padding: 0;
    box-sizing: border-box;
}

/* GENERAL */
a {
    text-decoration: none;
}
a:visited {
    color:initial;
}

h1 a {
    text-decoration: none;
}

li a:hover {
    background-color: rgba(0, 48, 73);
    color: white;
    text-shadow: 1px 1px 5px;
}

h4 {
    display: block;
    text-align: center;
    font-size: 1.3rem;
}

h1, h2, h3, h4, h5, p, span, a {
    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
}

h2  {
    padding: 5px 25px;
    box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 6px;
    margin-bottom: 10px;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.71);
    font-size: 1.8rem;
    text-align: center;
}

li {
    font-family: 'Open Sans', sans-serif;
}

/* BODY - START */
.body {
    display: grid;
    /* mobile view */
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 200px auto 1fr 1fr 1fr 320px;
    grid-template-areas:    "hd hd"
                            "nv nv"
                            "mn mn"
                            "mn mn"
                            "mn mn"
                            "ft ft";
    
}
/* BODY - END */


/* HEADER - START */
.header {
    grid-area: hd;
    border-bottom: 2px solid;
    background-image: url(../assets/imgs/header-bg-2-small.jpg);
    background-position:center;
    background-size:cover;
    background-repeat: no-repeat;

    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.header h1 a{
    font-size: 3rem;
    font-family: 'Signika', sans-serif;
    display: inline-block;
    color: azure;
    text-shadow:  2px 2px 4px black;
}
/* HEADER - END */


/* NAV - START */
.nav {
    grid-area: nv;
    background-color: rgb(103, 156, 192);
    box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 15px -15px;

    position: sticky;
    top:0;
    z-index: 100;
}

.menu-list {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    list-style: none;
    padding: 2px;
}

.menu-item {
    flex-grow: 1;
    background-color: hsl(202, 32%, 76%);
    color: black;
    text-align: center;
    text-shadow: 1px 1px 4px;
    font-weight: bold;
    font-size: 1.2em;
    margin: 1px;
    border: 1px solid black;
    border-radius: 2px;
    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
}

.menu-item a {
    text-decoration: none;
    padding: 10px;
    display: block;
}
/* NAV - END */

/* MAIN - START */
.main {
    grid-area: mn;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-items: stretch;
    padding: 5px;
}

.taggbox-container {
    padding-top: 20px;
    max-height: 600px;
    background-image: url(../assets/imgs/backgrounds/background1-medium.jpg);
    background-repeat: no-repeat;
    background-size:cover;
    background-position: center;
}

.div-card-small {
    background-color:azure;
    flex-grow: 1;
    flex-basis: 40%;
    margin: 5px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    border-radius: 10px 10px 2px 2px;
}

.div-card-big {
    background-color:azure;
    flex-grow: 1;
    flex-basis: 80%;
    margin: 5px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    border-radius: 10px 10px 2px 2px;
    
}

.card-img-container img {
    width: 100%;
    overflow: hidden;
    border-radius: 10px 10px 0 0;
}

.section-servicios {
    margin: 5px;
    width: 100%;
    padding: 10px 30px;
    background: rgba(255, 46, 0, 0.7);
    display: flex;
    flex-wrap: wrap;
}

.section-servicios h2{
    width: 100%;
}

.section-servicios ul {
    display: flex;
    flex-wrap: wrap;
    font-weight:lighter;
    list-style: none;
}

.section-servicios ul li {
    margin: 5px;
    padding: 10px;
    border: 1px solid black;
}

.div-img img {
    width: 100%;
}

.aside-img-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 10px;
    padding: 5px;
}

.div-img-servicios img {
    width: 100%;
}

.section-acercade {
    margin: 5px;
    width: 100%;
    padding: 10px 30px;
    background: rgba(255, 46, 0, 0.7)
}

.section-acercade p {
    font-weight:lighter;
}

.section-form {
    margin: 5px;
    width: 100%;
    background: rgba(255, 46, 0, 0.7);
    display: flex;
    flex-direction: column;
}

.side-img-form {
    display: none;
}

.side-img-form #sideimg-2 {
    width: 100%;
    border-radius: 25px 0 0 25px;
    min-height: 100%;
    max-height: 500px;
    box-shadow: -2px 0 8px black;
}

.side-img-form #sideimg-1 {
    width: 100%;
    border-radius: 0 25px 25px 0;
    min-height: 100%;
    max-height: 500px;
    box-shadow: 2px 0 8px black;
}

form {
    padding: 5px;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

input, textarea {
    margin: 5px;
    padding: 3px 20px;
    outline: none;
    border: 1px solid black;
    border-radius: 3px;
}


.form-input:focus, textarea:focus {
    border: 2px solid rgb(200, 10, 10);
    box-shadow: 0 0 3px 0;
}

.form-input {
    display: block;
}

.btn {
    background-color: azure;
    font-size: 18px;
    padding: 4px 20px;
    font-weight: 900;
}

.btn:active {
    background-color: gray;
    box-shadow: 0 0 3px 0;
}

.gallery-div {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    list-style: none;
    margin: 5px 5px 10px 5px;
}

.gallery-div li {
    height: 400px;
    cursor: pointer;
    flex: 1 1 auto;
    position: relative;
}

.gallery-div li img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.gallery-div::after {
    content: "";
    flex-grow: 999;
}

.img-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(57, 57, 57, 0.502);
    top: 0;
    left: 0;
    transform: scale(0);
    transition: all 0.2s 0.1s ease-in-out;
    color: rgb(255, 255, 255);
    border-radius: 15px;

    /* center content */
    display: flex;
    align-items: center;
    justify-content: center;
}

.gallery-div li:hover .img-overlay {
    transform: scale(1);
    transition: 0.5s;
}

/* MAIN - END */


/* FOOTER - START */
.footer {
    background-color: rgb(103, 156, 192);
    grid-area: ft;
    border-top: 2px solid;
    display: flex;
    flex-direction: column;
    padding: 5px;
    box-shadow: rgba(0, 0, 0, 0.45) 0px -20px 15px -15px;

    
}

.footer-left {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    flex-direction: column;
}

.contact-icons-ul {
    list-style: none;
    display: flex;
    flex-direction: row;
    padding: 5px;
    justify-content: center;
    
}

.icons-li {
    margin: 5px;
    padding: 2px;
    text-align: center;
    width: auto;
}

.fa-brands {
    font-size: 40px;
}

.fa-solid {
    font-size: 40px;
}

.footer-link {
    display: inline-block;
    padding: 1px 3px;
}

.footer-right {
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

.footer-right h4, h5 {
    margin-bottom: 4px;
}

.map-container {
    width: 100%;
    overflow: hidden;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}
.map-iframe {
    width: 100%;
    height: fit-content;
    padding: 10px;
}
/* FOOTER - END */


/* MEDIA QUERIES */
@media screen and (max-width:576px){
    .header h1 a {
        font-size: 1.9rem;
    }

    .footer-link {
        font-size: 16px;
        text-align: center;
    }

}

@media screen and (min-width:576px){
    .div-card-small {
        flex-basis: 30%;
    }

    .div-card-big {
        flex-basis: 45%;
    }
}

@media screen and (min-width:768px){
    .footer {
        flex-direction: row;
    }

    .footer-left {
        width: 25%;
    }

    .contact-icons-ul {
        flex-direction: column;
    }

    .footer-right {
        width: 75%;
    }

    .header {
        background-image: url(../assets/imgs/header-bg-2-medium.jpg);
    }

    .section-form {
        flex-direction: row;
    }

    form {
        width:100%;
    }

    .side-img-form {
        display: inline-block;
    }
    
}

@media screen and (min-width:992px) {

    .contact-icons-ul {
        flex-direction: row;
    }
}

@media screen and (min-width:1200px) {
    .div-card-small {
        flex-basis: 15%;
    }

    .div-card-big {
        flex-basis: 30%;
    }

}

